fix: input range thumb off center

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,20 +126,20 @@ input[type="range"] {
 
 /* Track */
 input[type="range"]::-webkit-slider-runnable-track {
-	@apply h-1 bg-orange-200 border-2 border-orange-400 rounded-full;
+	@apply h-1 bg-orange-300 rounded-full;
 }
 
 input[type="range"]::-moz-range-track {
-	@apply h-1 bg-orange-200 border-2 border-orange-400 rounded-full;
+	@apply h-1 bg-orange-300 rounded-full;
 }
 
 /* Thumb */
 input[type="range"]::-webkit-slider-thumb {
-	@apply appearance-none size-4 bg-orange-400 border-2 border-orange-500 rounded-full shadow-md transition -mt-1.5;
+	@apply appearance-none size-4 bg-orange-300 border-2 border-orange-400 rounded-full shadow-md transition -mt-1.5;
 }
 
 input[type="range"]::-moz-range-thumb {
-	@apply size-3.5 bg-orange-400 border-2 border-orange-500 rounded-full shadow-md transition;
+	@apply size-3.5 bg-orange-300 border-2 border-orange-400 rounded-full shadow-md transition;
 }
 
 /* Hover */
